Backup: update after latest DropshipzoneAPIClient changes on 2025-06-29